Fixed bug related with overlapping map

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,7 @@
 .App {
+  width: 100%;
+  position: absolute;
+  z-index: 1;
   text-align: center;
 }
 
@@ -24,10 +27,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.fixed-search {
-  width: 100%;
-  position: absolute;
-  z-index: 1;
 }
