--- a/src/styles/geosuggest.css
+++ b/src/styles/geosuggest.css
@@ -1,19 +1,17 @@
 .geosuggest {
-    font-size: 18px;
-    font-size: 1rem;
-    position: relative;
-    width: 50%;
-    margin: 1em auto;
-    text-align: left;
+  font-size: 1rem;
+  position: absolute;
+  width: 60%;
+  margin: 1em auto;
+  text-align: left;
+  z-index: 2;
+  left: 50%;
+  transform: translate(-50%);
   }
   .geosuggest__input-wrapper {
     width: 100%;
   }
   .geosuggest__input {
-    /* width: 100%;
-    border: 2px solid transparent;
-    box-shadow: 0 0 1px #3d464d;
-    padding: .5em 1em; */
     -webkit-transition: border 0.2s, box-shadow 0.2s;
             transition: border 0.2s, box-shadow 0.2s;
             box-sizing: border-box; 
@@ -27,10 +25,8 @@
   }
   .geosuggest__input:focus {
      border-color: #267dc0;
-    /*box-shadow: 0 0 0 transparent; */
     border: 1px solid #008abf;
     transition: 0.35s ease;
-    /* color: #008abf; */
     color: black;
   }
 
@@ -48,11 +44,9 @@
     padding: 0;
     margin-top: -1px;
     background: #fff;
-    /* border: 2px solid #267dc0; */
     border: 1px solid #008abf;
     transition: 0.35s ease;
     color: #008abf;
-    /* border-top-width: 0; */
     overflow-x: hidden;
     overflow-y: auto;
     list-style: none;
@@ -87,7 +81,6 @@
   .geosuggest__item__matched-text {
     font-weight: bold;
   }
-
 
   @media only screen and (max-width: 768px) {
     .geosuggest {
